    Implemented by NicknineTheEagle.
  - Added config option "startquiet" (in [dos] section)
    which when set to true will silence the information
    messages before launching Windows programs to run
    on the Windows host. A toggle menu item "Quiet mode
    (no start messages)" is added to the "Windows host
    applications" menu group in "DOS" menu. (Wengier)
  - Add menu group "Text-mode" under "Video" menu to
    change some text-mode related video settings, such
    as changing the number of rows and columns. A zip
    package named TEXTUTIL.ZIP is added to the Z drive
    that contains various utilities (such as CGA.COM,
    EGA.COM, 132X25.COM, 132X43.COM) to change current
    video setting from the command line. Also added a
    config option "high intensity blinking" which when
    set will display high intensity background colors
    instad of blinking foreground text. (Wengier)
  - Added "Debug" menu group under "Help" menu, and
    moved items from the "Video" Debug and "DOS" Debug
    menus and the debugger here (debug builds only).
    Also allowed to hide/show the console or debugger
    window in Windows debug builds. With the menu item
    "Console wait on error" checked the Windows console
    window will wait for the ENTER key before closing
    itself after an E_EXIT occurs. (Wengier)
  - Updated MPXPLAY to latest version 1.65. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4384: ICW1 on the PIC clears the Interrupt Mask
    Register. Fixes Antagony and quite a few demos that
    expect IRQs to be unmasked.
    - r4382: Refine adlib timers a bit more and make
    reading the Adlib take a bit more time.
    - r4378: Prevent some possible deadlocks with sti
    in dynrec core.
    - r4375: Improve compatibility with older Intel
    chipsets
    - r4374: Add a bit of hack so cycles=max/auto 90%
    keeps on working inside batch files after r3925.
    - r4371: Fix regression in Clue: Master Detective.